<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <variable
            name="weatherInfo"
            type="com.creator.myapplication.model.CurrentWeatherResponse" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.WeatherInfoFragment">

        <com.google.android.material.appbar.MaterialToolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?actionBarSize"
            app:layout_constraintTop_toTopOf="parent"
            app:navigationIcon="@drawable/ic_back"
            app:title="Weather Information" />

        <com.google.android.material.tabs.TabLayout
            android:id="@+id/weatherTabs"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/toolbar">

            <com.google.android.material.tabs.TabItem
                android:id="@+id/tabCurrentWeather"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/str_current_weather" />

            <com.google.android.material.tabs.TabItem
                android:id="@+id/tabForecast"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/str_5_days_forecast" />
        </com.google.android.material.tabs.TabLayout>

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/cardWeather"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:cardCornerRadius="10dp"
            app:cardElevation="5dp"
            app:cardUseCompatPadding="true"
            app:layout_constraintTop_toBottomOf="@id/weatherTabs"
            app:strokeWidth="1dp">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/tvCityName"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="10dp"
                    android:layout_marginVertical="10dp"
                    android:text="@{weatherInfo.name}"
                    android:textSize="18sp"
                    android:textStyle="bold"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    tools:text="Name of City" />

                <com.google.android.material.textview.MaterialTextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="10dp"
                    android:layout_marginVertical="10dp"
                    android:text="@string/str_weather"
                    android:textColor="@color/black"
                    android:textSize="18sp"
                    app:layout_constraintBottom_toBottomOf="@id/tvWeather"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="@id/tvWeather"
                    app:layout_constraintWidth_percent="0.45" />

                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/tvWeather"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="20dp"
                    android:layout_marginVertical="10dp"
                    android:gravity="end"
                    android:text="@{weatherInfo.weather.get(0).main}"
                    android:textSize="18sp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/tvCityName"
                    app:layout_constraintWidth_percent="0.45"
                    tools:text="Smoke" />

                <com.google.android.material.textview.MaterialTextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="10dp"
                    android:layout_marginVertical="10dp"
                    android:text="@string/str_temperature"
                    android:textColor="@color/black"
                    android:textSize="18sp"
                    app:layout_constraintBottom_toBottomOf="@id/tvTemperature"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="@id/tvTemperature"
                    app:layout_constraintWidth_percent="0.45" />

                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/tvTemperature"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="20dp"
                    android:layout_marginVertical="10dp"
                    android:gravity="end"
                    android:text="@{weatherInfo.main.temp.toString()}"
                    android:textSize="18sp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/tvWeather"
                    app:layout_constraintWidth_percent="0.45"
                    tools:text="298.16 F" />

                <com.google.android.material.textview.MaterialTextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="10dp"
                    android:layout_marginVertical="10dp"
                    android:text="@string/str_humidity"
                    android:textColor="@color/black"
                    android:textSize="18sp"
                    app:layout_constraintBottom_toBottomOf="@id/tvHumidity"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="@id/tvHumidity"
                    app:layout_constraintWidth_percent="0.45" />

                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/tvHumidity"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="20dp"
                    android:layout_marginVertical="10dp"
                    android:gravity="end"
                    android:text="@{weatherInfo.main.humidity.toString()}"
                    android:textSize="18sp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/tvTemperature"
                    app:layout_constraintWidth_percent="0.45"
                    tools:text="23" />

                <com.google.android.material.textview.MaterialTextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="10dp"
                    android:layout_marginVertical="10dp"
                    android:text="@string/str_pressure"
                    android:textColor="@color/black"
                    android:textSize="18sp"
                    app:layout_constraintBottom_toBottomOf="@id/tvPressure"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="@id/tvPressure"
                    app:layout_constraintWidth_percent="0.45" />

                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/tvPressure"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="20dp"
                    android:layout_marginVertical="10dp"
                    android:gravity="end"
                    android:text="@{weatherInfo.main.pressure.toString()}"
                    android:textSize="18sp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/tvHumidity"
                    app:layout_constraintWidth_percent="0.45"
                    tools:text="1000" />
            </androidx.constraintlayout.widget.ConstraintLayout>
        </com.google.android.material.card.MaterialCardView>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rvWeather"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:visibility="gone"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="@id/weatherTabs"
            tools:itemCount="10"
            tools:listitem="@layout/item_weather_info" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>